fix: modify bucket structure: unify response data for OpenAPI and impl
